--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
-<p>dkjvbKEAJD</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meal Finder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="home.css">
+</head>
+<body>
+    <!-- NavBar -->
+
+    <header>
+        <div class="navbar">
+            <div class="nav">
+                <a href="#"><i class="fas fa-utensils fa-xl"></i>
+                <h2>MEAL FINDER</h2></a>
+            </div>
+            <div>
+                <div id="menu">
+                    <span>&#9776;</span>
+                </div>
+                <nav id="side-menu">
+                    <div id="close">&times;</div>
+                    <ul>
+                        <li><a href="#">Beef</a></li>
+                        <li><a href="#">Chicken</a></li>
+                        <li><a href="#">Dessert</a></li>
+                        <li><a href="#">Lamb</a></li>
+                        <li><a href="#">Miscellaneous</a></li>
+                        <li><a href="#">Pasta</a></li>
+                        <li><a href="#">Pork</a></li>
+                        <li><a href="#">Seafood</a></li>
+                        <li><a href="#">Side</a></li>
+                        <li><a href="#">Starter</a></li>
+                        <li><a href="#">Vegan</a></li>
+                        <li><a href="#">Vegetarian</a></li>
+                        <li><a href="#">Breakfast</a></li>
+                        <li><a href="#">Goat</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+
+
+    <!-- Search bar  -->
+
+    <div id="search">
+        <input id="ser" type="text" value="Search Your Recipies here .....">
+        <i id="mag" class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i>
+
+        <h2>What are your favorite cuisines?</h2>
+        <h4>PERSONALIZE YOUR EXPERIENCE</h4>
+    </div>
+
+
+
+
+    <!-- categories -->
+
+    
+    <h2 id="cat"><span>CATEG</span>ORIES</h2>
+    <div class="container" id="cat-list">
+        <!-- Categories will be injected here -->
+
+        <div class="categ-items"></div>
+            <div>
+                <!-- <span class=".one">Beef</span> -->
+                <a href="#"><img class="img" src="" alt="Beef"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Chicken"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Dessert"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Lamb"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Miscellaneous"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Pasta"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Pork"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Seafood"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Side"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Starter"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Vegan"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Vegetarian"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Breakfast"></a>
+            </div>
+            <div>
+                <a href="#"><img class="img" src="" alt="Goat"></a>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+        <script src="home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
