--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                 <nav id="side-menu">
                     <div id="close">&times;</div>
                     <ul>
-                        <li><a href="#">Beef</a></li>
-                        <li><a href="#">Chicken</a></li>
-                        <li><a href="#">Dessert</a></li>
-                        <li><a href="#">Lamb</a></li>
-                        <li><a href="#">Miscellaneous</a></li>
-                        <li><a href="#">Pasta</a></li>
-                        <li><a href="#">Pork</a></li>
-                        <li><a href="#">Seafood</a></li>
-                        <li><a href="#">Side</a></li>
-                        <li><a href="#">Starter</a></li>
-                        <li><a href="#">Vegan</a></li>
-                        <li><a href="#">Vegetarian</a></li>
-                        <li><a href="#">Breakfast</a></li>
-                        <li><a href="#">Goat</a></li>
+                        <li><a href="category.html?category=Beef">Beef</a></li>
+                        <li><a href="category.html?category=Chicken">Chicken</a></li>
+                        <li><a href="category.html?category=Dessert">Dessert</a></li>
+                        <li><a href="category.html?category=Lamb">Lamb</a></li>
+                        <li><a href="category.html?category=Miscellaneous">Miscellaneous</a></li>
+                        <li><a href="category.html?category=Pasta">Pasta</a></li>
+                        <li><a href="category.html?category=Pork">Pork</a></li>
+                        <li><a href="category.html?category=Seafood">Seafood</a></li>
+                        <li><a href="category.html?category=Side">Side</a></li>
+                        <li><a href="category.html?category=Starter">Starter</a></li>
+                        <li><a href="category.html?category=Vegan">Vegan</a></li>
+                        <li><a href="category.html?category=Vegetarian">Vegetarian</a></li>
+                        <li><a href="category.html?category=Breakfast">Breakfast</a></li>
+                        <li><a href="category.html?category=Goat">Goat</a></li>
                     </ul>
                 </nav>
             </div>
@@ -50,7 +50,7 @@
 
     <div id="search">
         <input id="ser" type="text" value="Search Your Recipies here .....">
-        <i id="mag" class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i>
+        <button id="mag"><i class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i></button>
 
         <h2>What are your favorite cuisines?</h2>
         <h4>PERSONALIZE YOUR EXPERIENCE</h4>
@@ -69,46 +69,46 @@
         <div class="categ-items"></div>
             <div>
                 <!-- <span class=".one">Beef</span> -->
-                <a href="#"><img class="img" src="" alt="Beef"></a>
+                <a href="category.html?category=Beef"><img class="img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Chicken"></a>
+                <a href="category.html?category=Chicken"><img class="img" src="" alt="Chicken"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Dessert"></a>
+                <a href="category.html?category=Dessert"><img class="img" src="" alt="Dessert"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Lamb"></a>
+                <a href="category.html?category=Lamb"><img class="img" src="" alt="Lamb"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Miscellaneous"></a>
+                <a href="category.html?category=Miscellaneous"><img class="img" src="" alt="Miscellaneous"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Pasta"></a>
+                <a href="category.html?category=Pasta"><img class="img" src="" alt="Pasta"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Pork"></a>
+                <a href="category.html?category=Pork"><img class="img" src="" alt="Pork"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Seafood"></a>
+                <a href="category.html?category=Seafood"><img class="img" src="" alt="Seafood"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Side"></a>
+                <a href="category.html?category=Side"><img class="img" src="" alt="Side"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Starter"></a>
+                <a href="category.html?category=Starter"><img class="img" src="" alt="Starter"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Vegan"></a>
+                <a href="category.html?category=Vegan"><img class="img" src="" alt="Vegan"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Vegetarian"></a>
+                <a href="category.html?category=Vegetarian"><img class="img" src="" alt="Vegetarian"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Breakfast"></a>
+                <a href="category.html?category=Breakfast"><img class="img" src="" alt="Breakfast"></a>
             </div>
             <div>
-                <a href="#"><img class="img" src="" alt="Goat"></a>
+                <a href="category.html?category=Goat"><img class="img" src="" alt="Goat"></a>
             </div>
         </div>
 
