--- a/category.html
+++ b/category.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+    <!-- NavBar -->
+
     <header>
         <div class="navbar">
             <div class="nav">
@@ -22,29 +25,33 @@
                 <nav id="side-menu">
                     <div id="close">&times;</div>
                     <ul>
-                        <li><a href="#">Beef</a></li>
-                        <li><a href="#">Chicken</a></li>
-                        <li><a href="#">Dessert</a></li>
-                        <li><a href="#">Lamb</a></li>
-                        <li><a href="#">Miscellaneous</a></li>
-                        <li><a href="#">Pasta</a></li>
-                        <li><a href="#">Pork</a></li>
-                        <li><a href="#">Seafood</a></li>
-                        <li><a href="#">Side</a></li>
-                        <li><a href="#">Starter</a></li>
-                        <li><a href="#">Vegan</a></li>
-                        <li><a href="#">Vegetarian</a></li>
-                        <li><a href="#">Breakfast</a></li>
-                        <li><a href="#">Goat</a></li>
+                        <li><a href="category.html?category=Beef">Beef</a></li>
+                        <li><a href="category.html?category=Chicken">Chicken</a></li>
+                        <li><a href="category.html?category=Dessert">Dessert</a></li>
+                        <li><a href="category.html?category=Lamb">Lamb</a></li>
+                        <li><a href="category.html?category=Miscellaneous">Miscellaneous</a></li>
+                        <li><a href="category.html?category=Pasta">Pasta</a></li>
+                        <li><a href="category.html?category=Pork">Pork</a></li>
+                        <li><a href="category.html?category=Seafood">Seafood</a></li>
+                        <li><a href="category.html?category=Side">Side</a></li>
+                        <li><a href="category.html?category=Starter">Starter</a></li>
+                        <li><a href="category.html?category=Vegan">Vegan</a></li>
+                        <li><a href="category.html?category=Vegetarian">Vegetarian</a></li>
+                        <li><a href="category.html?category=Breakfast">Breakfast</a></li>
+                        <li><a href="category.html?category=Goat">Goat</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
 
+
+
+    <!-- Search bar  -->
+
     <div id="search">
         <input id="ser" type="text" value="Search Your Recipies here .....">
-        <i id="mag" class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i>
+        <button id="mag"><i class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i></button>
 
         <h2>What are your favorite cuisines?</h2>
         <h4>PERSONALIZE YOUR EXPERIENCE</h4>
@@ -67,5 +74,7 @@
     </div>
     
     <script src="home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
