--- a/category.html
+++ b/category.html
@@ -15,7 +15,7 @@
     <header>
         <div class="navbar">
             <div class="nav">
-                <a href="#"><i class="fas fa-utensils fa-xl"></i>
+                <a href="index.html"><i class="fas fa-utensils fa-xl"></i>
                 <h2>MEAL FINDER</h2></a>
             </div>
             <div>
@@ -51,7 +51,7 @@
 
     <div id="search">
         <input id="ser" type="text" value="Search Your Recipies here .....">
-        <button id="mag"><i class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i></button>
+        <a href="#" ><i id="mag" class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i></a>
 
         <h2>What are your favorite cuisines?</h2>
         <h4>PERSONALIZE YOUR EXPERIENCE</h4>
