--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meal Finder</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Meals Finder</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <!-- NavBar -->
 
+    <!---------------------------------- header section --------------------------------------->
     <header>
         <div class="navbar">
-            <div class="nav">
-                <a href="index.html"><i class="fas fa-utensils fa-xl"></i>
-                <h2>MEAL FINDER</h2></a>
+            <div class="nav-left">
+                <i class="fa-solid fa-utensils"></i>
+                <a href="index.html" class="logo">MEAL FINDER</a>
             </div>
-            <div>
-                <div id="menu">
-                    <span>&#9776;</span>
+            <div class="nav-right">
+                <div id="menu-btn">
+                    <span class="icon">&#9776;</span>
                 </div>
                 <nav id="side-menu">
-                    <div id="close">&times;</div>
+                    <div id="close-btn">&times;</div>
                     <ul>
                         <li><a href="category.html?category=Beef">Beef</a></li>
                         <li><a href="category.html?category=Chicken">Chicken</a></li>
@@ -45,83 +44,70 @@
     </header>
 
 
-
-    <!-- Search bar  -->
-
-    <div id="search">
-        <input id="ser" type="text" value="Search Your Recipies here .....">
-        <a href="#" ><i id="mag" class="fa-solid fa-magnifying-glass fa-xl" style="color: #ffffff;"></i></a>
-
-        <h2>What are your favorite cuisines?</h2>
-        <h4>PERSONALIZE YOUR EXPERIENCE</h4>
+    <!--------------------------- banner section -------------------------------->
+    <div class="banner">
+        <div>
+            <input type="text" placeholder="Search recipes here..." class="ban-input" id="meal-search">
+            <i class="fa-solid fa-magnifying-glass" onclick="searchMeal()"></i> <!-- Search Icon -->
+            <h2 class="ban-text">What are your favorite cuisines?</h2>
+            <p class="ban-text">PERSONALIZE YOUR EXPERIENCE</p>
+        </div>
     </div>
 
+    <div id="search-results" class="search-results"></div>
 
 
-
-    <!-- categories -->
-
-    
-    <h2 id="cat"><span>CATEG</span>ORIES</h2>
-    <div class="container" id="cat-list">
-        <!-- Categories will be injected here -->
-
-        <div class="categ-items"></div>
+    <!------------------------------ categories section ------------------------------->
+    <div class="categories">
+        <h4 class="categ-head"><span class="underline">CATE</span>GORIES</h4>
+        <div class="categ-items">
             <div>
-                <!-- <span class=".one">Beef</span> -->
-                <a href="category.html?category=Beef"><img class="img" src="" alt="Beef"></a>
+                <!-- <p class=".one">Beef</p> -->
+                <a href="category.html?category=Beef"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Chicken"><img class="img" src="" alt="Chicken"></a>
+                <a href="category.html?category=Chicken"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Dessert"><img class="img" src="" alt="Dessert"></a>
+                <a href="category.html?category=Dessert"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Lamb"><img class="img" src="" alt="Lamb"></a>
+                <a href="category.html?category=Lamb"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Miscellaneous"><img class="img" src="" alt="Miscellaneous"></a>
+                <a href="category.html?category=Miscellaneous"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Pasta"><img class="img" src="" alt="Pasta"></a>
+                <a href="category.html?category=Pasta"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Pork"><img class="img" src="" alt="Pork"></a>
+                <a href="category.html?category=Pork"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Seafood"><img class="img" src="" alt="Seafood"></a>
+                <a href="category.html?category=Seafood"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Side"><img class="img" src="" alt="Side"></a>
+                <a href="category.html?category=Side"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Starter"><img class="img" src="" alt="Starter"></a>
+                <a href="category.html?category=Starter"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Vegan"><img class="img" src="" alt="Vegan"></a>
+                <a href="category.html?category=Vegan"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Vegetarian"><img class="img" src="" alt="Vegetarian"></a>
+                <a href="category.html?category=Vegetarian"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Breakfast"><img class="img" src="" alt="Breakfast"></a>
+                <a href="category.html?category=Breakfast"><img class="categ-img" src="" alt="Beef"></a>
             </div>
             <div>
-                <a href="category.html?category=Goat"><img class="img" src="" alt="Goat"></a>
+                <a href="category.html?category=Goat"><img class="categ-img" src="" alt="Beef"></a>
             </div>
         </div>
-
     </div>
 
-
-
-
-
-
-
-
-        <script src="home.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
